# envire-envire_smurf

./: CMakeLists.txt  README.md  manifest.xml
src/: CMakeLists.txt  Collidable.cpp  Collidable.hpp  CollidableRegistration.cpp  Dummy.cpp  Dummy.hpp  FrameRegistration.cpp  GraphLoader.cpp  GraphLoader.hpp  InertialRegistration.cpp  JointRegistration.cpp  Main.cpp  MotorRegistration.cpp  PluginRegistrations.cpp  Robot.cpp  Robot.hpp  SensorRegistration.cpp  StaticTransformationRegistration.cpp  Visual.cpp  Visual.hpp  VisualRegistration.cpp  envire_smurf.xml  envire_smurf_collidable_vis.xml  envire_smurf_visual_vis.xml
test/: CMakeLists.txt  GraphLoader_test.cpp  suite.cpp  test_Dummy.cpp  test_robot.cpp
test/sample_smurfs/two_boxes_joined/smurf/: two_boxes_with_motor_motors.yml  two_boxes_with_sensors.yml
viz/: CMakeLists.txt  Collidable.cpp  Collidable.hpp  EnvireSmurfCollidableVisualization.cpp  EnvireSmurfCollidableVisualization.hpp  EnvireSmurfVisualization.cpp  EnvireSmurfVisualization.hpp  PluginLoader.cpp  SmurfItemCollidable.hpp  SmurfItemVisual.hpp  Visual.cpp  envire_smurf-viz.pc.in  vizkit_plugin.rb
